<resources>
    <string name="app_name">توصيله</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="success">Success!</string>
    <string name="loading">Loading&#8230;</string>
    <string name="fail_input_edittext">Please Check Your Inputs</string>
    <string name="server_key" translatable="false">AAAAXuVOldU:APA91bF9Kz_udNp0VmuK8dzL7bLQ2hTx6vB_xFAq_X_hHvsOkLImNFOWm0LCpzE_mspc9jrWK5UnzRwctDLy3lt_JhJXfhT2aJRmb8gqNyfn9Nj3fJtqlSFHUhPzqbNhPVGzHSO1lBjmRDzk89W0CS4msa4WoBLUPA</string>
    <string name="fcm_url" translatable="false">https://fcm.googleapis.com/fcm/send</string>
    <string name="vansit_shared_preferences">Vansit_SP</string>
    <string name="city">City</string>
    <string name="type">Type</string>
    <string name="title_activity_login">Sign in</string>
    <string name="allCities">All Cities</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hello_blank_fragment">Soon Will be Available</string>
    <string name="login_email_null_error">Email is required</string>
    <string name="login_email_invalid_error">Incorrect email</string>
    <string name="login_password_null_error">Password is required</string>
    <string name="my_account_title_text">Personal Data</string>
    <string name="my_account_firstName_text">First Name</string>
    <string name="my_account_lastName_text">Last Name </string>
    <string name="my_account_phone_text">Phone Number </string>
    <string name="my_account_gender_text">Gender :</string>
    <string name="my_account_gender_male_text">Male</string>
    <string name="my_account_gender_female_text">Female</string>
    <string name="my_account_birthday_text">Birthday :</string>
    <string name="my_account_homeCity_text">Home city :</string>
    <string name="list_item_city_text">City : </string>
    <string name="list_item_type_text">Type : </string>
    <string name="list_item_brand_text">Brand : </string>
    <string name="list_item_model_text">Model : </string>
    <string name="list_item_Year_text">Year : </string>
    <string name="list_item_user_rating_text">User Rating : </string>
    <string name="list_item_price_rating_text">Price Rating : </string>
    <string name="list_item_delete_text">Delete </string>
    <string name="list_item_edit_text"> Edit </string>
    <string name="list_item_share_text">Share </string>
    <string name="list_item_call_text">Call </string>
    <string name="list_item_love_text">Love </string>
    <string name="list_item_profile_text">Profile </string>
    <string name="menu_login_text">Sign In</string>
    <string name="menu_logout_text">Sign Out</string>
    <string name="menu_my_account_text">My Account</string>
    <string name="menu_home_text">Home</string>
    <string name="menu_fav_text">Like</string>
    <string name="menu_rec_text">Add Request</string>
    <string name="menu_req_text">Requests</string>
    <string name="menu_account_text">Account</string>
    <string name="menu_my_offers_text">My Offers</string>
    <string name="menu_settings_text">Settings</string>
    <string name="menu_requests_text">Settings</string>
    <string name="main_order_city">Order by city</string>
    <string name="main_order_type">Order by type</string>
    <string name="main_no_result">no matches srevices</string>
    <string name="main_fab_text_add_request">add request</string>
    <string name="main_fab_text_add_offer">add offer</string>
    <string name="user_information_title">Profile</string>
    <string name="user_information_more_offers">See more offers</string>
    <string name="main_show_more">Show More</string>
    <string name="add_offer_title_text">Title </string>
    <string name="add_offer_title_hint">Example : Transport school students</string>
    <string name="add_offer_desc_text">Description : </string>
    <string name="add_offer_desc_hint"> Here add your notes about this offer, like : \n - your work time  </string>
    <string name="add_offer_info_offer_text">Location and Type </string>
    <string name="add_offer_about_offer_text">About service </string>
    <string name="add_offer_info_user_text">User  </string>
    <string name="add_offer_user_name_text">Name : </string>
    <string name="add_offer_user_phone_text">Phone : </string>
    <string name="add_offer_title_null_error">Title is required</string>
    <string name="add_offer_desc_null_error">Description is required</string>
    <string name="add_offer_city_null_error">City is required</string>
    <string name="add_offer_type_null_error">Type is required</string>
    <string name="add_offer_click_again_to_exit">click BACK again to exit</string>
    <string name="my_offer_sure">Are You Sure?</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="sign_in_title">Sign in</string>
    <string name="sign_in_desc">using your account</string>
    <string name="sign_in_forget_password">Forget your password?</string>
    <string name="sign_in_register_link">Dont have account? Sign up now</string>
    <string name="sign_up_title">Sign up</string>
    <string name="sign_up_login_link">Already have account? Sign in now</string>
    <string name="reset_title">Reset Password</string>
    <string name="reset_desc">To reset your password, enter the email address you use to sign in to this application</string>
    <string name="view_requests_address">Address:</string>
    <string name="view_requests_distance">Distance:</string>
    <string name="view_requests_status">Status:</string>
    <string name="view_requests_map">Open Map</string>
    <string name="view_requests_serve">Serve</string>
    <string name="view_requests_map_navigation">Open Navigation</string>
    <string name="my_request_title">My Request</string>
    <string name="my_request_deleted">Request Deleted</string>
    <string name="my_request_refresh">Refresh Request</string>
    <string name="my_request_accept_btn">Accept</string>
    <string name="my_request_decline_btn">Decline</string>
    <string name="mview_requests_status_availble">Available to serve</string>
    <string name="mview_requests_status_not_availble">User is being served</string>
    <string name="layout_button_save">save</string>
    <string name="layout_button_cancel">cancel</string>
    <string name="hint_text_email">Email</string>
    <string name="hint_text_password">Password</string>
    <string name="noInternetMsg">No Internet Connection</string>
    <string name="user_rating">User Rating :</string>
    <string name="price_rating">Price Rating :</string>
    <string name="add_rate">Add Rate</string>
    <string name="add_rate_duplicate">You Already Rated This User Before!</string>
    <string name="user_information_home_city">Living in </string>
    <string name="user_information_age">Age is  </string>
    <string name="user_not_logged">Please sign in first to rate this user</string>
    <string name="user_rate_to_hisself">You cannot rate your offers</string>
    <string name="user_rate_agian">You rated this user before</string>
    <string name="user_rate_done">Rating successfully done, Thank you</string>
    <string name="recommended">Recommended for you :</string>
    <string name="add_request_gps_off_msg">Location services are not enabled</string>
    <string name="add_request_gps_off_btn">Enable</string>
    <string name="add_request_save_btn_text">add request</string>
    <string name="add_request_searching">Searching for location ...</string>
    <string name="add_request_gps_for_app">Allow this application to use GPS </string>
    <string name="add_request_gps_for_app_btn">Allow</string>
    <string name="my_request_address">"Address "</string>
    <string name="my_request_time">Time remaining :</string>
    <string name="my_account_save_done">Save Successfully</string>
    <string name="my_account_birth_error">Invalid Birth day</string>
    <string name="my_account_first_name_error">First name is required</string>
    <string name="my_account_last_name_error">Last name is required</string>
    <string name="my_account_phone_error">Phone number is required</string>
    <string name="user_rate_5">Excellent</string>
    <string name="user_rate_4">Very Good</string>
    <string name="user_rate_3">Good</string>
    <string name="user_rate_2">Not Bad</string>
    <string name="user_rate_1">Bad</string>
    <string name="price_rate_1">Very Cheap</string>
    <string name="price_rate_2">Cheap</string>
    <string name="price_rate_3">Normal</string>
    <string name="price_rate_4">Expensive</string>
    <string name="price_rate_5">Very Expensive</string>
    <string name="accepted_request_commit">Commit</string>
    <string name="accepted_request_done">Done</string>
    <string name="accepted_request_cancel">Cancel</string>
    <string name="accepted_request_map">Map</string>
    <string name="accepted_request_Navigation">Navigation</string>
    <string name="accepted_request_user_title">You are being served by</string>
    <string name="accepted_request_driver_title">You are serving now </string>
    <string name="more_offer_information_addedFav_success">Added To Favorites!</string>
    <string name="more_offer_information_addedFav_fail">You Already Added This Offer!</string>
    <string-array name="city_list">
        <item>Select City</item>
        <item>Amman</item>
        <item>Zarqa</item>
        <item>Irbid</item>
        <item>Ajloun</item>
        <item>Jarash</item>
        <item>Aqaba</item>
        <item>Mafraq</item>
        <item>Tafila</item>
        <item>Maan</item>
        <item>Madaba</item>
        <item>Balqa</item>
        <item>Karak</item>
    </string-array>
    <string name="select_city">Select City</string>
    <string name="Amman">Amman</string>
    <string name="Zarqa">Zarqa</string>
    <string name="Irbid">Irbid</string>
    <string name="Ajloun">Ajloun</string>
    <string name="Jarash">Jarash</string>
    <string name="Aqaba">Aqaba</string>
    <string name="Mafraq">Mafraq</string>
    <string name="Tafila">Tafila</string>
    <string name="Maan">Maan</string>
    <string name="Madaba">Madaba</string>
    <string name="Balqa">Balqa</string>
    <string name="Karak">Karak</string>
    <string name="Car">Cars</string>
    <string name="Bus">Buses</string>
    <string name="Truck">Trucks</string>
    <string name="Taxi">Taxis</string>
    <string-array name="type_list">
        <item>Select Type</item>
        <item>Car</item>
        <item>Bus</item>
        <item>Truck</item>
        <item>Taxi</item>
    </string-array>
    <string-array name="rating_service">
        <item>Bad</item>
        <item>Not Good</item>
        <item>Good</item>
        <item>Very Good</item>
        <item>Excellent</item>
    </string-array>
    <string-array name="rating_price">
        <item>Cheap</item>
        <item>Too Good</item>
        <item>Good</item>
        <item>normal</item>
        <item>Bad</item>
    </string-array>
    <string name="title_activity_user_info">userInfo</string>
</resources>