<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="devgam.vansit.moreOfferInformation"
    tools:showIn="@layout/activity_more_offer_information"
    android:layout_margin="@dimen/views_button_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/views_button_margin">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/add_offer_desc_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textStyle="normal|bold"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/offerInfo_descData"
                android:textSize="14sp"
                android:singleLine="false"
                android:layout_marginLeft="@dimen/views_margin_s"
                android:layout_marginRight="@dimen/views_margin_s" />

            <TextView
                android:text="@string/add_offer_info_user_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="@dimen/views_top_margin"
                android:layout_marginTop="@dimen/views_top_margin" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/views_button_margin">

                <TextView
                    android:text="@string/add_offer_user_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addOffer_title_text"
                    android:textSize="14sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/offerInfo_nameData"
                    android:textSize="14sp"
                    android:layout_marginLeft="@dimen/views_top_margin"
                    android:layout_marginRight="@dimen/views_top_margin" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/views_button_margin">

                <TextView
                    android:text="@string/user_information_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addOffer_title_text"
                    android:textSize="14sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/offerInfo_ageData"
                    android:textSize="14sp"
                    android:layout_marginLeft="@dimen/views_top_margin"
                    android:layout_marginRight="@dimen/views_top_margin" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/views_button_margin">

                <TextView
                    android:text="@string/user_information_home_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addOffer_title_text"
                    android:textSize="14sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/offerInfo_homeCityData"
                    android:textSize="14sp"
                    android:layout_marginLeft="@dimen/views_top_margin"
                    android:layout_marginRight="@dimen/views_top_margin" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/views_button_margin">

                <TextView
                    android:text="@string/list_item_user_rating_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addOffer_title_text"
                    android:textSize="14sp"
                    android:textStyle="normal|bold" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/offerInfo_serviceRatingData"
                    android:numStars="5"
                    android:stepSize="1"
                    android:rating="0"
                    android:isIndicator="true"
                    style="@style/user_rating_main_style"
                    android:elevation="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/offerInfo_serviceRatingName"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:layout_marginLeft="@dimen/views_top_margin"
                    android:layout_marginRight="@dimen/views_top_margin"
                    android:gravity="center_vertical" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/views_button_margin">

                <TextView
                    android:text="@string/list_item_price_rating_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addOffer_title_text"
                    android:textSize="14sp"
                    android:textStyle="normal|bold" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/offerInfo_priceRatingData"
                    android:numStars="5"
                    android:stepSize="1"
                    android:rating="0"
                    android:isIndicator="true"
                    style="@style/price_rating_main_style"
                    android:elevation="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:layout_marginLeft="@dimen/views_top_margin"
                    android:layout_marginRight="@dimen/views_top_margin"
                    android:id="@+id/offerInfo_priceRatingName"
                    android:gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:text="@string/recommended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="@dimen/views_top_margin"
            android:layout_marginTop="@dimen/views_margin_xl" />

        <ListView
            android:layout_width="match_parent"
            android:id="@+id/more_offer_information_recommend_list"
            android:layout_height="800dp" />

    </LinearLayout>






</android.support.v4.widget.NestedScrollView>
